--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "speedtest": "./src/cli.js"
+    "fast-speedtest": "./src/cli.js"
   },
   "repository": {
     "type": "git",
