--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   ],
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0",
     "mocha": "^5.0.0"
   }
 }
