--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=7.10.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+	"release": "release-it"
   },
   "bin": {
     "fast-speedtest": "./src/cli.js"
