--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "release-it": "^9.8.1"
   }
 }
