--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=7.10.1"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "tsc && mocha ./dist/test/*.js",
     "release": "release-it"
   },
   "bin": {
@@ -15,16 +15,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/branchard/fast-speedtest-api.git"
+    "url": "git+https://github.com/eSkillzCorp/fast-speedtest-api.git"
   },
   "author": "branchard",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/branchard/fast-speedtest-api/issues"
+    "url": "https://github.com/eSkillzCorp/fast-speedtest-api/issues"
   },
-  "homepage": "https://github.com/branchard/fast-speedtest-api#readme",
+  "homepage": "https://github.com/eSkillzCorp/fast-speedtest-api#readme",
   "keywords": [
     "speedtest",
+    "typescript",
     "speed",
     "network",
     "test",
@@ -38,12 +39,18 @@
     "cli"
   ],
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^14.0.1",
     "chai": "^4.2.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "mocha": "^5.2.0",
-    "release-it": "^9.8.1"
+    "release-it": "^9.8.1",
+    "ts-mocha": "^7.0.0",
+    "ts-node": "^8.10.1",
+    "typescript": "^3.9.2"
   },
   "dependencies": {
     "https-proxy-agent": "^2.2.2"
